<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ProductSearchAppActivity!</string>
    <string name="app_name">WikiShopper 1.0</string>
    <string name="search">Search</string>
    <string name="name">By Name</string>
    <string name="upc">By UPC No</string>
     <string name="ean">By EAN No</string>
     <string name="mpn">By MPN No</string>
     <string name="check">Search With Preferences </string>
     <string name="product_search">Product Search </string>
      <string name="category_edit">Category Preferences</string>
       <string name="category">Category</string>
     
   
    <string name="no_products_found">Sorry. No products were found for this request.</string>
    <string name="pro_menu">Pros</string>
    <string name="cons_menu">Cons</string>
     <string name="keyfeatures_menu">Key Features</string>
    <string name="image_menu">Image</string> 
    <string name="more_menu">More</string>
    <string name="related_menu">Related</string>
      
    
     <string name="pref">Preference</string>
     <string name="change_button">Change</string>
     <string name="return_button">Return</string>
     <string name="frame_name">Add New Category</string>
     <string name="cat_name">Category</string>
     <string name="pref_1">Preference 1</string>
     <string name="pref_2">Preference 2</string>
     <string name="pref_3">Preference 3</string>
     <string name="add">Add Category</string>
     <string name="new_cat">New Category</string>
     <string name="show_cat">Edit Category</string>
     <string name="delete_cat">Delete Category</string>
     <string name="delete_cat_text">Category Name -</string>
     <string name="delete_cat_button">Delete</string>
     <string name="delete_spinner__prompt">Choose a category</string>
    
</resources>
